--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
   <link rel="stylesheet" type="text/css" href="jstyle.css">
+  <link rel="stylesheet" type="text/css" href="header_style.css">
 </head>
 <body class='spacer'>
   <div class="main">
     <header class="header">
-      <div class="logo"><img  src="https://icon-library.com/images/50x50-icon/50x50-icon-0.jpg"/></div>
-      <div class="menu">
+      <div class="header__logo header__logo_size header__logo_brdr"><img  src="https://icon-library.com/images/50x50-icon/50x50-icon-0.jpg"/></div>
+      <div class="header__menu">
           <ul >
-            <li><a href='https://www.bbc.com/news/world' class="mlink">WNews</a></li>
-            <li><a href='https://developer.mozilla.org/ru/' class="mlink">MDN</a></li>
+            <li><a href='https://www.bbc.com/news/world' class="header__mlink header__mlink_color">WNews</a></li>
+            <li><a href='https://developer.mozilla.org/ru/' class="header__mlink">MDN</a></li>
             <li><a href='https://css-tricks.com/snippets/css/a-guide-to-flexbox/' class="mlink">Tricks</a></li>
           </ul>
       </div>
