--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div class="header__menu">
           <ul >
             <li><a href='https://www.bbc.com/news/world' class="header__mlink header__mlink_color">WNews</a></li>
-            <li><a href='https://developer.mozilla.org/ru/' class="header__mlink">MDN</a></li>
-            <li><a href='https://css-tricks.com/snippets/css/a-guide-to-flexbox/' class="mlink">Tricks</a></li>
+            <li><a href='https://developer.mozilla.org/ru/' class="header__mlink header__mlink_color">MDN</a></li>
+            <li><a href='https://css-tricks.com/snippets/css/a-guide-to-flexbox/' class="mlink header__mlink_color">Tricks</a></li>
           </ul>
       </div>
     </header>
