--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="main">
     <header class="header">
       <div class="header__logo header__logo_size header__logo_brdr"><img  src="https://icon-library.com/images/50x50-icon/50x50-icon-0.jpg"/></div>
-      <div class="header__menu">
+      <div class="header__menu header__menu_pozition">
           <ul >
             <li><a href='https://www.bbc.com/news/world' class="header__mlink header__mlink_color">WNews</a></li>
             <li><a href='https://developer.mozilla.org/ru/' class="header__mlink header__mlink_color">MDN</a></li>
