--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body class='spacer'>
   <div class="main">
-    <header class="header">
+    <header class="header header_flex">
       <div class="header__logo header__logo_size header__logo_brdr"><img  src="https://icon-library.com/images/50x50-icon/50x50-icon-0.jpg"/></div>
-      <div class="header__menu">
-          <ul class="header__ul">
+      <div class="header__menu header__menu_flex">
+          <ul class="header__ul header__ul_flex">
             <li><a href='https://www.bbc.com/news/world' class="header__mlink header__mlink_color">WNews</a></li>
             <li><a href='https://developer.mozilla.org/ru/' class="header__mlink header__mlink_color">MDN</a></li>
             <li><a href='https://css-tricks.com/snippets/css/a-guide-to-flexbox/' class="mlink header__mlink_color">Tricks</a></li>
